# Learn-to-Code

./: .gitignore  LICENSE  README.md  client.c  main.c  myscript.sh  mytext.txt  notes.c  notes.sh  requirements.txt
c/: Makefile  client.c  ctest.c  functions.h  main.c  main.s  notes.c  preprocessed.c  sorting.c  sorting.h  test
c/io-stuff/: contract_data  iostuff.txt  write_here.txt
cyber_security/: notes.md
cyber_security/code_examples/: buffer_overun
data-structures/: Makefile  helpers.c  helpers.h  notes.c  practice.c
data-structures/src/: helpers.h  notes.c
data-structures/tex/: output.tex
data_structures/: notes.c
docker/: notes.md
go/: notes.go
http/: notes.ipynb
java/: Notes.java
javascript/: README.md  compare.java
javascript/modules/: math_util.js
languages/bash/: notes.sh
languages/bash/iterate_dirs/a2/: feedback.txt
languages/bash/iterate_dirs/t1/: feedback.txt
languages/bash/iterate_dirs/t3/: feedback.txt
languages/c/: Makefile  main.s  notes.c  sorting.h
languages/c++/: .gitignore  notes.cpp
languages/c++/example-project/: CMakeLists.txt
languages/c++/example-project/lib/math/: CMakeLists.txt  math.cpp
languages/c++/example-project/src/: main.cpp
languages/c/io-stuff/: assassin_list
languages/docker/: Dockerfile  notes.md
languages/go/: notes.go
languages/java/: Notes.java
languages/javascript/: index.html  index.js  notes.js  style.css
languages/json_yaml_csv/: notes.json
languages/lua/: mymodule.lua  notes.lua
languages/lua/examples/: init.lua  output.txt  typical_module.lua
languages/powershell/: notes.ps1
languages/python/: README.md  notes.py  requirements.txt  virtualenv_pyenv.md
languages/python/django/: notes.ipynb
languages/python/django/django_project/django_project/: settings.py
languages/python/ml/data/datasets/text/ag_news/ag_news/default/0.0.0/eb185aade064a813bc0b7f42de02595523103ca4/: ag_news-test.arrow  dataset_info.json
languages/r/: README.md  SUDS.Rmd  notes.Rmd  test.r
languages/react/: package.json
languages/ruby/: notes.rb
languages/rust/: notes.rs
languages/rust/my_app/: Cargo.toml
languages/rust/my_app/src/: main.rs  math.rs
languages/rust/my_app/src/subdir/: foo.rs  mod.rs
languages/rust/my_app/src/temp/: mod.rs
languages/shell-script/: notes.sh
languages/shell-script/iterate_dirs/: iterdirs.sh
languages/shell-script/iterate_dirs/a1/: feedback.txt
languages/shell-script/iterate_dirs/a2/: feedback.txt
languages/shell-script/iterate_dirs/t1/: feedback.txt
languages/sql/: initialize_mock_data.sql  notes.sql
languages/x86/: notes.md
matlab/: test.m
operating_systems/: notes.md
parallel_programming/: notes.md
parallel_programming/labs/: lab1.tgz
parallel_programming/labs/lab1/: Makefile  lab1  lab1-opt  lab1-opt.c  lab1.c  time_util.h
php/: notes.php
powershell/: notes.ps1
python/: data_analysis.ipynb  data_analysis.py  jupyter.ipynb  notes.py  requirements.txt
python/data/: 6XWX_bike_rides.csv
python/ml/: NLP.ipynb  Supervised_Learning.ipynb  Unsupervised_Learning.ipynb
r/: README-Acer-DK.md  SUDS.Rmd  SUDS.html  SUDS.md  data - data.csv.csv  notes.Rmd  notes.r  test.Rmd  test.r
react/: package-lock.json
react/my-app/: package-lock.json
react/my-app/src/: App.css  App.tsx
ruby/: notes.rb
scala/: notes.scala  notes.tasty
shell-script/: myscript.sh  notes.sh
shell-script/iterate_dirs/a1/: feedback.txt
shell-script/iterate_dirs/t2/: feedback.txt
shell-script/iterate_dirs/t3/: feedback.txt
sql/: notes.sql
ssh/: mytext.txt  notes.sh
ssh/dir2/: test.txt
topics/cyber-security/: .gitattributes  .gitignore  jots.md  notes.md
topics/cyber-security/code_examples/: buffer_overun.c  c_refresher.c  fp_indirect.c  sizes.c
topics/cyber-security/code_examples/bufferoverruns/: getsp.c  index.html  internalHack.c  stack.c  stackSolution.c  ta.txt  target1.c  target2.c
topics/cyber-security/code_examples/hacker_home/: makeShellCode.pl  swapAround  swapAround.c  v3.c  v4.c  zz
topics/cyber-security/manuals/: smashstack.html
topics/data-structures/: notes.c  practice.c
topics/databases/: notes.md
topics/docker/: notes.md
topics/git/: notes.md
topics/http/: notes.ipynb
topics/leetcode/: README.md
topics/leetcode/easy/: 121_best_time_to_buy_and_sell_stock.cpp  121_best_time_to_buy_and_sell_stock.py  1_two_sum.cpp  1_two_sum.py  217_contains_duplicate.cpp  217_contains_duplicate.py  69_sqrt_x.cpp  70_climbing_stairs.cpp
topics/leetcode/hard/: 154_find_minimum_in_rotated_sorted_array_ii.py
topics/leetcode/medium/: 11_container_with_most_water.cpp  134.py  15_3sum.cpp  2_add_two_numbers.cpp  33_search_in_rotated_sorted_array.cpp  53_maximum_subarray.cpp
topics/operating-systems/: notes.md
topics/parallel-programming/: notes.md
topics/parallel-programming/code_examples/: creating_and_deleting_threads.c
topics/parallel-programming/code_examples/openmp/: for_directive.c  simple.c  variable_scopes.c
topics/parallel-programming/code_examples/pthreads/: joining_threads.c
topics/using-vim/: README.md  neovim.md  vim.md
topics/using-vscode/: vscode.md
topics/vim/: neovim.md
vscode/: vscode.md
